Add get user by id
